css added to the main page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Iván´s Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
       <tr>
         <td>2019 - 2020</td>
         <td>CEO RedCircleDev</td>
-        <td>Red Circle Development</td>
+        <td>RC Development</td>
       </tr>
     </tbody>
     <tfoot>
